[tool.poetry]
name = "repl_python3_beta_weatherMachine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geopy = "^2.0.0"
bs4 = "^0.0.1"
geocoder = "^1.38.1"
art = "^4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
